update another solution

--- a/LC27.remove-element.md
+++ b/LC27.remove-element.md
@@ -10,7 +10,7 @@
 
 ## 解
 
-- 双指针法
+1. 双指针法
 ```
 class Solution {
 public:
@@ -25,6 +25,26 @@ public:
                 nums[j]=nums[i];
                 i++;j++;
             }
+        }
+        return j;
+    }
+};
+```
+2. 反向双指针（这个是答案的思路，好优雅啊！T_T）
+```
+class Solution {
+public:
+    int removeElement(vector<int>& nums, int val) {
+        int i=0,j=nums.size();
+        while(i<j)
+        {
+            if(nums[i]==val)
+            {
+                nums[i]=nums[j-1];
+                j--;
+            }
+            else
+                i++;
         }
         return j;
     }
