--- a/1_array/LC118.Pascal's Triangle.md
+++ b/1_array/LC118.Pascal's Triangle.md
@@ -34,5 +34,12 @@ class Solution:
 - 时间复杂度：
   - o(n^2)
 ```
-[`code`]
+class Solution:
+    def generate(self, numRows: int) -> List[List[int]]:
+        lst = [[None for _ in range(j+1)] for j in range(numRows)]
+        for i in range(numRows):
+            lst[i][0], lst[i][-1] = 1, 1
+            for j in range(1, i):
+                lst[i][j] = lst[i-1][j-1] + lst[i-1][j]
+        return lst
 ```
