--- a/1_array/LC122. Best Time to Buy and Sell Stock II.md
+++ b/1_array/LC122. Best Time to Buy and Sell Stock II.md
@@ -9,11 +9,15 @@
 
 ## 解
 
-### 方法一：错误例子
+### 方法一：错误例子(WA)
 - 思路：
-  - 和上一题的
+  - 收到上一题的[官方解](https://github.com/lorwin0130/Algorithm-newbie/blob/master/1_array/LC121.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock.md)的启发（误导）。这道题我想当然的认为：维护一个min_price，遇到更低的价格就更新，遇到高的价格就卖出，于是产生了如下的错误代码（请勿模仿，引以为戒！）
 - 时间复杂度：
   - WA
+- 反例：
+  - [1,2,3,4,5]
+    - 我的结果：2（1入2出，3入4出）
+    - 正确结果：4（1入5出）
 ```
 class Solution {
 public:
@@ -31,7 +35,7 @@ public:
 };
 ```
 
-### 方法二：
+### 方法二：改正
 - 思路：
   - [content]
 - 时间复杂度：
@@ -43,10 +47,11 @@ public:
 ## 记
 
 <!-- 
+符号用()包住
 @basic - 基础
 @important - 重点
 @warning - 易错
 @todo - 待研究
  -->
 
-- [总结记录]
+- (@warning)方法一没有考虑多次买卖，导致连续增长时，不能获取全部的利润的情况！
