--- a/1_array/LC122. Best Time to Buy and Sell Stock II.md
+++ b/1_array/LC122. Best Time to Buy and Sell Stock II.md
@@ -37,21 +37,81 @@ public:
 
 ### 方法二：改正
 - 思路：
-  - [content]
+  - 和上一个错误解法不同处是：改为在股票跌的前一天卖出
 - 时间复杂度：
-  - [content]
+  - o(n)
+- 结果：
+  - 用时：7%(8ms)
+  - 内存：5%
 ```
-[`code`]
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        prices.push_back(0);
+        int min_price=INT_MAX, prev=-1, all_profit=0;
+        for(int i=0;i<prices.size();i++){
+            if(prices[i]<prev){
+                all_profit+=prev-min_price;
+                min_price=INT_MAX;
+            }
+            if(prices[i]<min_price) min_price=prices[i];
+            prev=prices[i];
+        }
+        return all_profit;
+    }
+};
+```
+
+### 方法三：参考官方解-谷峰法（更好理解）
+- 思路：
+  - 思想和上面一样，在遍历过程中连续找谷及之后的峰即可，更好理解，解法更简洁
+- 时间复杂度：
+  - o(n)
+- 结果:
+  - 用时：97%(4ms)
+  - 内存：6%
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        if(prices.size()==0) return 0;
+        int min=prices[0], max=prices[0], p=0,i=0;
+        while(i<prices.size()-1){
+            while(i<prices.size()-1 && prices[i]>=prices[i+1])
+                i++;
+            int min=prices[i];
+            while(i<prices.size()-1 && prices[i]<=prices[i+1])
+                i++;
+            int max=prices[i];
+            p+=max-min;
+        }
+        return p;
+    }
+};
+```
+
+### 方法四：参考官方解-简单一次遍历（更简洁）
+- 思路：
+  - 对于每两天的价格，累计其中涨的差价（写法和思路是真的简洁呀！）
+- 时间复杂度：
+  - o(n)
+- 结果:
+  - 用时：71%(8ms)
+  - 内存：51%
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int p=0;
+        for(int i=1;i<prices.size();i++){
+            if(prices[i]>prices[i-1])
+                p+=prices[i]-prices[i-1];
+        }
+        return p;
+    }
+};
 ```
 
 ## 记
-
-<!-- 
-符号用()包住
-@basic - 基础
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
 
 - (@warning)方法一没有考虑多次买卖，导致连续增长时，不能获取全部的利润的情况！
