--- a/1_array/LC15. 3Sum.md
+++ b/1_array/LC15. 3Sum.md
@@ -9,39 +9,86 @@
 
 ## 解
 
-### 方法一：
+### 方法一：暴力法
 - 思路：
-  - [content]
+  - 一开始想到的就是暴力三层循环，先选一个数，将问题转化为两数之和。但是不用想，必然超时,时间复杂度太高为o(n^3)。
+  - 那么思考时间复杂度可以能到多少？两个备选:o(n),o(n^2)
+    - o(n):题目是找到所有的三数之和等于零的值，o(n)复杂度不现实
+    - o(n^2):暴力法超时，必能优化，必然是这个复杂度
+
+### 方法二：排序+查表
+- 思路：
+  - 既然要实现时间复杂度为o(n^2)的算法，可以考虑先对数组进行排序。然后使用哈希表。
 - 时间复杂度：
-  - [content]
+  - o(n^2)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：因为没想到不添加重复解的方法，最后对所有解去重，还是超时T_T
 ```
-[`code`]
+class Solution {
+public:
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        vector<vector<int>> res;
+        set<vector<int>> result;
+        sort(nums.begin(),nums.end());
+        int zero=0;
+        for(int i=0;i<nums.size();i++){
+            if(nums[i]==0) zero++;
+            if(zero>=3){
+                result.insert({0,0,0});
+                break;
+            }
+        }
+        for(int i=0;i<nums.size();i++){
+            unordered_set<int> m;
+            for(int j=i+1;j<nums.size();j++){
+                if(m.count(nums[j])) result.insert({nums[i],0-nums[i]-nums[j],nums[j]});
+                m.insert(0-nums[i]-nums[j]);
+            }
+        }
+        res.assign(result.begin(),result.end());
+        return res;
+    }
+};
 ```
 
-### 方法二：
+### 方法三：排序+双指针
 - 思路：
-  - [content]
+  - 既然要实现时间复杂度为o(n^2)的算法，可以考虑先对数组进行排序。然后使用双指针法。跳过重复值。
 - 时间复杂度：
-  - [content]
+  - o(n^2)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：86%(72ms)
+  - 内存：38%
 ```
-[`code`]
+class Solution {
+public:
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        vector<vector<int>> res;
+        sort(nums.begin(),nums.end());
+        for(int i=0;i<nums.size();i++){
+            if(i>0 && nums[i]==nums[i-1]) continue;
+            int j=i+1,k=nums.size()-1;
+            while(j<k){
+                int sum = nums[i]+nums[j]+nums[k];
+                if(sum>0){
+                    k--;while(k>i+1 && nums[k]==nums[k+1]) k--;
+                }
+                else if(sum<0){
+                    j++;while(j<nums.size()-1 && nums[j]==nums[j-1]) j++;
+                }
+                else{
+                    res.push_back({nums[i],nums[j],nums[k]});
+                    //和两数之和不同，要找出所有的解，所有要继续遍历下去
+                    j++;while(j<nums.size()-1 && nums[j]==nums[j-1]) j++;
+                    k--;while(k>i+1 && nums[k]==nums[k+1]) k--;
+                }
+            }
+        }
+        return res;
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
+- (@important)做题时，可以先计算暴力法的时间复杂度，然后思考最优解的（或者是优化解）的时间复杂度。有助于思考优化方法！！！
