--- a/1_array/LC16. 3Sum Closest.md
+++ b/1_array/LC16. 3Sum Closest.md
@@ -10,7 +10,7 @@ from: leetcode 16
 
 ### 方法一：
 - 思路：
-  - 排序+双指针，和[LC15. 3Sum(leetcode-15题)]()相比，本题解唯一，无需考虑重复解。维护最近距离dis及其对应的三数之和closest_sum，两个全局变量迭代更新即可。
+  - 排序+双指针，和[LC15. 3Sum(leetcode-15题)](https://github.com/lorwin0130/Algorithm-newbie/blob/master/1_array/LC15.%203Sum.md)相比，本题解唯一，无需考虑重复解。维护最近距离dis及其对应的三数之和closest_sum，两个全局变量迭代更新即可。
 - 时间复杂度：
   - o(n^2)
 - 结果:
@@ -47,28 +47,3 @@ public:
     }
 };
 ```
-
-### 方法二：
-- 思路：
-  - [content]
-- 时间复杂度：
-  - [content]
-- 结果:
-  - 用时：%
-  - 内存：%
-```
-[`code`]
-```
-
-## 记
-
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
