--- a/1_array/LC39. Combination Sum.md
+++ b/1_array/LC39. Combination Sum.md
@@ -19,8 +19,8 @@ From: leetcode-39
 - 思路：
   - dfs,递归搜索树，注意结果去重（排序、剪枝）
     - 递归出口：
-      - target=0 的 返回结果
-      - target<0 的 返回上一层
+      - target=0 的 记录结果，返回
+      - target<0 的 返回
 - 结果:
   - 用时：95%(8ms)
   - 内存：40%
