--- a/1_array/LC53.Maximum Subarray.md
+++ b/1_array/LC53.Maximum Subarray.md
@@ -21,7 +21,7 @@ public:
         {
             if(tmp>0) tmp+=nums[i];
             else tmp=nums[i];
-            opt=opt>tmp?opt:tmp;
+            if(tmp>opt) opt=tmp;
         }
         return opt;
     }
