--- a/1_array/LC45. Jump Game II.md
+++ b/1_array/LC45. Jump Game II.md
@@ -3,49 +3,63 @@
 ## 题
 
 给定一个非负整数数组，你最初位于数组的第一个位置。
-
 数组中的每个元素代表你在该位置可以跳跃的最大长度。
-
 你的目标是使用最少的跳跃次数到达数组的最后一个位置。
 
 From: leetcode-45
 
 ## 解
 
-### 方法一：
+### 方法一：参考题解（贪心）
 - 思路：
-  - [content]
+  - 采取贪心策略，每次找到最远可到达距离，实际上就是最小跳数。
 - 时间复杂度：
-  - [content]
-- 结果:
-  - 用时：%
-  - 内存：%
+  - o(n)
 ```
-[`code`]
+class Solution {
+public:
+    int jump(vector<int>& nums) {
+        int end=0, max_pos=0, step=0;
+        for(int i=0;i<nums.size()-1;i++){
+            max_pos=max(max_pos,i+nums[i]);
+            if(i==end){
+                end=max_pos;
+                step++;
+            }
+        }
+        return step;
+    }
+};
 ```
 
 ### 方法二：
 - 思路：
-  - [content]
+  - 从最后一个格子，往前找能到达的最前面的格子
 - 时间复杂度：
-  - [content]
+  - o(n^2)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：超时
 ```
-[`code`]
+class Solution {
+public:
+    int jump(vector<int>& nums) {
+        int last_pos=nums.size()-1, step=0;
+        while(last_pos!=0){
+            for(int i=0;i<nums.size();i++){
+                if(i+nums[i]>=last_pos){
+                    last_pos=i;
+                    step++;
+                    break;
+                }
+            }
+        }
+        return step;
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- 尝试找到贪心策略，一般来说是最优解
+- 非最优解法也要会（如：方法二），面试中：即使没有想出最优解，想出一个可行解也比没想出解法要强！
+- 2020.02.21 by lorwin
