--- a/leetcode_weekly/177/LC5170. Validate Binary Tree Nodes.md
+++ b/leetcode_weekly/177/LC5170. Validate Binary Tree Nodes.md
@@ -14,7 +14,7 @@ From: leetcode-weekly-177
 
 ## 解
 
-### 方法一：
+### 方法一：错误例子WA（反例：3 [1，0，-1] [-1，-1，-1]）
 - 思路：
   - 记录出度不为0的点
     - 如果为树，应只有根不在该set中，即size=点数-1
@@ -44,19 +44,42 @@ public:
 };
 ```
 
-### 方法二：python一行代码
+### 方法二：
 - 思路：
-  - 同上
+  - 找入度为0的点，如果不是一个，return false
+  - 从唯一入度为零的点，进行bfs遍历，并计数，如果遍历过程中有结点指向已访问过的结点，return false
+  - 遍历计数！=n， return false；否则，return true
 - 结果:
-  - 用时：100%（40ms）
+  - 用时：100%（84ms）
   - 内存：100%
 ```
-class Solution:
-    def validateBinaryTreeNodes(self, n: int, leftChild: List[int], rightChild: List[int]) -> bool:
-        return 2*n-(leftChild + rightChild).count(-1)==len(set(leftChild + rightChild)-{-1})==n-1
+class Solution {
+public:
+    bool validateBinaryTreeNodes(int n, vector<int>& leftChild, vector<int>& rightChild) {
+        unordered_set<int> not_root,visited;
+        queue<int> q;
+        int root=0,tmp,node_num=0;
+        for(int i=0;i<n;i++){
+            if(leftChild[i]!=-1) not_root.insert(leftChild[i]);
+            if(rightChild[i]!=-1) not_root.insert(rightChild[i]);
+        }
+        if(not_root.size()!=n-1) return false;
+        while(not_root.count(root)) root++;
+        q.push(root);
+        while(!q.empty()){
+            tmp=q.front(); q.pop(); node_num++;
+            if(visited.count(tmp)) return false;
+            visited.insert(tmp);
+            if(leftChild[tmp]!=-1) q.push(leftChild[tmp]);
+            if(rightChild[tmp]!=-1) q.push(rightChild[tmp]);
+        }
+        return node_num==n;
+    }
+};
 ```
 
 ## 记
 
-- 一行代码看着还是爽啊（不说了，先去吃饭了）
+- 考虑问题要周到，能想出反例也是一种能力。
 - 2020.02.23 by lorwin
+- modify in 2020.02.24
