--- a/1_array/LC63. Unique Paths II.md
+++ b/1_array/LC63. Unique Paths II.md
@@ -8,44 +8,43 @@
 
 现在考虑网格中有障碍物。那么从左上角到右下角将会有多少条不同的路径？
 
+网格中的障碍物和空位置分别用 1 和 0 来表示。
+
+说明：m 和 n 的值均不超过 100。
+
 From: leetcode-63
 
 ## 解
 
 ### 方法一：
 - 思路：
-  - [content]
+  - 动态规划
+  - 如果遇到障碍，该位置值为0，否则为该位置左和上之和
 - 时间复杂度：
-  - [content]
+  - o(m*n)
+- 空间复杂度：
+  - o(m)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：89%(4ms)
+  - 内存：5%
 ```
-[`code`]
-```
-
-### 方法二：
-- 思路：
-  - [content]
-- 时间复杂度：
-  - [content]
-- 结果:
-  - 用时：%
-  - 内存：%
-```
-[`code`]
+class Solution {
+public:
+    int uniquePathsWithObstacles(vector<vector<int>>& obstacleGrid) {
+        if(obstacleGrid.empty() || obstacleGrid[0][0]==1) return 0;
+        vector<long> res(obstacleGrid[0].size()+1,0);
+        for(int i=1;i<=obstacleGrid.size();i++){
+            for(int j=1;j<=obstacleGrid[0].size();j++){
+                if(i==1 && j==1) {res[j]=1-obstacleGrid[i-1][j-1];continue;}
+                if(obstacleGrid[i-1][j-1]) res[j]=0;
+                else res[j]+=res[j-1];
+            }
+        }
+        return res[obstacleGrid[0].size()];
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- 2020.02.26 by lorwin
