--- a/1_array/LC64. Minimum Path Sum.md
+++ b/1_array/LC64. Minimum Path Sum.md
@@ -10,38 +10,29 @@
 
 ### 方法一：
 - 思路：
-  - [content]
+  - 动态规划，取上和左的最小值加上该位置的数字
 - 时间复杂度：
-  - [content]
+  - o(m*n)
+- 空间复杂度：
+  - o(m)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：58%(12ms)
+  - 内存：5%
 ```
-[`code`]
-```
-
-### 方法二：
-- 思路：
-  - [content]
-- 时间复杂度：
-  - [content]
-- 结果:
-  - 用时：%
-  - 内存：%
-```
-[`code`]
+class Solution {
+public:
+    int minPathSum(vector<vector<int>>& grid) {
+        vector<int> res=grid[0];
+        for(int i=1;i<res.size();i++) res[i]+=res[i-1];
+        for(int i=1;i<grid.size();i++){
+            res[0]+=grid[i][0];
+            for(int j=1;j<res.size();j++) res[j]=min(res[j],res[j-1])+grid[i][j];
+        }
+        return res[res.size()-1];
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- 2020.02.26 by lorwin
