--- a/leetcode_weekly/177/LC5172. Largest Multiple of Three.md
+++ b/leetcode_weekly/177/LC5172. Largest Multiple of Three.md
@@ -12,40 +12,113 @@ From: leetcode-weekly-177
 
 ## 解
 
-### 方法一：
+### 方法一：超级繁琐
 - 思路：
-  - [content]
+  - 对数组降序排列,如果最大为0，返回0
+  - 计算数组和sum：如果sum mod 3:
+    - =0: 选择所有数字
+    - =1：去掉最小的一个模为1的数，或者两个模为2的数
+    - =2：去掉最小的一个模为2的数，或者两个模为1的数
+  - 返回数列降序排序
 - 时间复杂度：
-  - [content]
+  - o(nlogn)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：16ms
+  - 内存：100%
 ```
-[`code`]
+class Solution {
+public:
+    string largestMultipleOfThree(vector<int>& digits) {
+        vector<int> del;
+        sort(digits.begin(),digits.end());
+        if(digits[digits.size()-1]==0) return "0";
+        int sum=0;
+        string res="";
+        for(int i=0;i<digits.size();i++) sum+=digits[i];
+        if(sum%3==0){
+            for(int i=digits.size()-1;i>=0;i--) res+=digits[i]+'0';
+            return res;
+        }else if(sum%3==1){
+            for(int i=0;i<digits.size();i++){
+                if(digits[i]%3==1){
+                    for(int j=digits.size()-1;j>=0;j--){
+                        if(aj==i) continue;
+                        res+=digits[j]+'0';
+                    }
+                    return res;
+                }
+            }
+            for(int i=0;i<digits.size();i++){
+                if(digits[i]%3==2){
+                    del.push_back(i);
+                    if(del.size()==2){
+                        for(int j=digits.size()-1;j>=0;j--){
+                            if(j==del[0] || j==del[1]) continue;
+                            res+=digits[j]+'0';
+                        }
+                        return res;
+                    }
+                }
+            }
+        }else{
+            for(int i=0;i<digits.size();i++){
+                if(digits[i]%3==2){
+                    for(int j=digits.size()-1;j>=0;j--){
+                        if(j==i) continue;
+                        res+=digits[j]+'0';
+                    }
+                    return res;
+                }
+            }
+            for(int i=0;i<digits.size();i++){
+                if(digits[i]%3==1){
+                    del.push_back(i);
+                    if(del.size()==2){
+                        for(int j=digits.size()-1;j>=0;j--){
+                            if(j==del[0] || j==del[1]) continue;
+                            res+=digits[j]+'0';
+                        }
+                        return res;
+                    }
+                }
+            }
+        }
+        return res;
+    }
+};
 ```
 
-### 方法二：
+### 方法二：参考题解(超级简洁)
 - 思路：
-  - [content]
+  - 基本思路和上面一样，但是有几个地方可以优化：
+    - 1. 可以利用桶来记录数字，并代替方法一的排序操作（ o(nlogn)->o(n) ）
+    - 2. 删除数字操作多次使用，另起一个函数
 - 时间复杂度：
-  - [content]
+  - O(n)
 - 结果:
-  - 用时：%
-  - 内存：%
+  - 用时：99%（4ms）
+  - 内存：100%
 ```
-[`code`]
+class Solution {
+    int cnt[10],sum=0;
+    string res="";
+    int del(int rem){
+        for(int i=rem;i<=9;i+=3) if(cnt[i]) {cnt[i]--,sum-=i;return 1;}
+        return 0;
+    }
+public:
+    string largestMultipleOfThree(vector<int>& digits) {
+        for(int i=0;i<digits.size();i++) cnt[digits[i]]++,sum+=digits[i];
+        if(sum%3==1) if(!del(1)) del(2),del(2);
+        if(sum%3==2) if(!del(2)) del(1),del(1);
+        if(!sum && cnt[0]) return "0";
+        for(int i=9;i>=0;i--) while(cnt[i]--) res+=i+'0';
+        return res;
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- 多学习总结优秀简洁的题解
+- 2020.02.25 by lorwin
