--- a/1_array/LC79. Word Search.md
+++ b/1_array/LC79. Word Search.md
@@ -14,42 +14,112 @@
 
 ### 方法一：
 - 思路：
-  - [content]
+  - dfs递归
 - 时间复杂度：
-  - [content]
+  - o(m*n*k) (k=len(word))
 - 空间复杂度：
-  - [content]
+  - o(m*n)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：超时！
 ```
-[`code`]
+class Solution {
+public:
+    bool dfs(vector<vector<char>>& board, string word, vector<vector<bool>> visited, int i,int j, int w){
+        if(board[i][j]!=word[w]) return false;
+        if(w==word.length()-1) return true;
+        visited[i][j]=true;
+        bool up=false,right=false,down=false,left=false;
+        int M=board.size(),N=board[0].size();
+        if(i-1>=0 && !visited[i-1][j]) up=dfs(board, word, visited, i-1, j, w+1);
+        if(j+1<=N-1 && !visited[i][j+1]) right=dfs(board, word, visited, i, j+1, w+1);
+        if(i+1<=M-1 && !visited[i+1][j]) down=dfs(board, word, visited, i+1, j, w+1);
+        if(j-1>=0 && !visited[i][j-1]) left=dfs(board, word, visited, i, j-1, w+1);
+        if(up || right || down || left) return true;
+        visited[i][j]=false;
+        return false;
+    }
+    bool exist(vector<vector<char>>& board, string word) {
+        if(word=="") return false;
+        int M=board.size(),N=board[0].size();
+        for(int i=0;i<M;i++){
+            for(int j=0;j<N;j++) {
+                vector<vector<bool>> visited(M, vector<bool>(N,false));
+                if(dfs(board, word, visited, i, j, 0)) return true;
+            }
+        }
+        return false;
+    }
+};
 ```
 
-### 方法二：
+### 方法二：改进
 - 思路：
-  - [content]
+  - 改进：用board代替visited二维数组
 - 时间复杂度：
-  - [content]
+  - o(m*n*k)
 - 空间复杂度：
-  - [content]
+  - o(1)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：25%（296ms）
+  - 内存：22%（125.5MB）
 ```
-[`code`]
+class Solution {
+public:
+    bool dfs(vector<vector<char>>& board, string word, int i,int j, int w){
+        if(board[i][j]!=word[w]) return false;
+        if(w==word.length()-1) return true;
+        char tmp=board[i][j]; board[i][j]=0;
+        if( (i-1>=0 && dfs(board, word, i-1, j, w+1)) 
+        || (j+1<=board[0].size()-1 && dfs(board, word, i, j+1, w+1))
+        || (i+1<=board.size()-1 && dfs(board, word, i+1, j, w+1))
+        || (j-1>=0 && dfs(board, word, i, j-1, w+1)) ) return true;
+        board[i][j]=tmp;
+        return false;
+    }
+    bool exist(vector<vector<char>>& board, string word) {
+        for(int i=0;i<board.size();i++){
+            for(int j=0;j<board[0].size();j++) if(dfs(board, word, i, j, 0)) return true;
+        }
+        return false;
+    }
+};
+```
+
+### 方法三：小小的改动，大大的优化
+- 思路：
+  - dfs函数用实参 **string& word**
+- 时间复杂度：
+  - o(m*n*k)
+- 空间复杂度：
+  - o(1)
+- 结果:
+  - **用时：86%（24ms）**
+  - **内存：75%（10.2MB）**
+```
+class Solution {
+public:
+    bool dfs(vector<vector<char>>& board, string& word, int i,int j, int w){
+        if(board[i][j]!=word[w]) return false;
+        if(w==word.length()-1) return true;
+        char tmp=board[i][j]; board[i][j]=0;
+        if( (i-1>=0 && dfs(board, word, i-1, j, w+1)) 
+        || (j+1<=board[0].size()-1 && dfs(board, word, i, j+1, w+1))
+        || (i+1<=board.size()-1 && dfs(board, word, i+1, j, w+1))
+        || (j-1>=0 && dfs(board, word, i, j-1, w+1)) ) return true;
+        board[i][j]=tmp;
+        return false;
+    }
+    bool exist(vector<vector<char>>& board, string word) {
+        for(int i=0;i<board.size();i++){
+            for(int j=0;j<board[0].size();j++) if(dfs(board, word, i, j, 0)) return true;
+        }
+        return false;
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- c++ tips：函数能用实参不要用形参
+  - 实参是指针，**传递指针**要比传递整个变量节省的多（时间、空间）！！！
+- 2020.03.03 by lorwin
