--- a/1_array/LC80. Remove Duplicates from Sorted Array II.md
+++ b/1_array/LC80. Remove Duplicates from Sorted Array II.md
@@ -8,48 +8,35 @@
 
 来源：力扣（LeetCode）
 链接：https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array-ii
-著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
 
 ## 解
 
 ### 方法一：
 - 思路：
-  - [content]
+  - 双指针 + 重复值计数
 - 时间复杂度：
-  - [content]
+  - o(n)
 - 空间复杂度：
-  - [content]
+  - o(1)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：94%（8ms）
+  - 内存：5%
 ```
-[`code`]
-```
-
-### 方法二：
-- 思路：
-  - [content]
-- 时间复杂度：
-  - [content]
-- 空间复杂度：
-  - [content]
-- 结果:
-  - 用时：%（ms）
-  - 内存：%
-```
-[`code`]
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+        if(nums.empty()) return 0;
+        int p=1,dup=1,i=1;
+        while(i<nums.size()){
+            dup = nums[i]==nums[i-1]?dup+1:1;
+            if(dup<3) nums[p++]=nums[i++];
+            else i++;
+        }
+        return p;
+    }
+};
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- 2020.03.03 by lorwin
