--- a/1_array/LC105. Construct Binary Tree from Preorder and Inorder Traversal.md
+++ b/1_array/LC105. Construct Binary Tree from Preorder and Inorder Traversal.md
@@ -24,44 +24,117 @@
 
 ## 解
 
-### 方法一：
+### 方法一：递归
 - 思路：
-  - [content]
+  - 前序遍历确定根，中序遍历确定左右子树范围，递归
 - 时间复杂度：
-  - [content]
+  - o(n)
 - 空间复杂度：
-  - [content]
+  - o(n)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：67%（24ms）
+  - 内存：26%
 ```
-[`code`]
+class Solution {
+public:
+    TreeNode* buildTree_div(vector<int>& preorder, int p_begin, int p_end, vector<int>& inorder, int i_begin, int i_end) {
+        TreeNode* root=new TreeNode(preorder[p_begin]);
+        int i;for(i=i_begin;i<=i_end;i++) if(inorder[i]==preorder[p_begin]) break;
+        if(i_begin<i) root->left=buildTree_div(preorder, p_begin+1, p_begin+i-i_begin, inorder, i_begin, i-1);
+        if(i_end>i) root->right=buildTree_div(preorder, p_begin+1+i-i_begin, p_end, inorder, i+1, i_end);
+        return root;
+    }
+    TreeNode* buildTree(vector<int>& preorder, vector<int>& inorder) {
+        if(preorder.empty()) return NULL;
+        return buildTree_div(preorder, 0, preorder.size()-1, inorder, 0, inorder.size()-1);
+    }
+};
 ```
 
-### 方法二：
+### 方法二：递归-优化
 - 思路：
-  - [content]
+  - 递归，优化点：
+    - **初始化时，构造中序遍历的map，key为每个元素的值，value为该元素对应在中序遍历中的索引。降低查找根的位置的时间。**
+    - 对于处理的所有非空树，他们的根是按前序遍历的顺序的。可以比方法一少传几个参数。
 - 时间复杂度：
-  - [content]
+  - o(n)
 - 空间复杂度：
-  - [content]
+  - o(n)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：81%（20ms）
+  - 内存：26%
 ```
-[`code`]
+class Solution {
+    vector<int> pre,ino;
+    map<int,int> in_map;
+    int pre_idx=0;
+    TreeNode* buildTree_div(int left, int right){
+        if(left==right) return NULL;
+        int root_val=pre[pre_idx++];
+        TreeNode* root=new TreeNode(root_val);
+        int root_idx=in_map[root_val];
+        root->left=buildTree_div(left,root_idx);
+        root->right=buildTree_div(root_idx+1,right);
+        return root;
+    }
+public:
+    TreeNode* buildTree(vector<int>& preorder, vector<int>& inorder) {
+        pre=preorder,ino=inorder;
+        for(int i=0;i<inorder.size();i++) in_map[inorder[i]]=i;
+        return buildTree_div(0,preorder.size());
+    }
+};
+```
+
+### 方法三：非递归
+```[Java实现，c++待实现]
+public TreeNode buildTree(int[] preorder, int[] inorder) {
+    if (preorder.length == 0) {
+        return null;
+    }
+    Stack<TreeNode> roots = new Stack<TreeNode>();
+    int pre = 0;
+    int in = 0;
+    //先序遍历第一个值作为根节点
+    TreeNode curRoot = new TreeNode(preorder[pre]);
+    TreeNode root = curRoot;
+    roots.push(curRoot);
+    pre++;
+    //遍历前序遍历的数组
+    while (pre < preorder.length) {
+        //出现了当前节点的值和中序遍历数组的值相等，寻找是谁的右子树
+        if (curRoot.val == inorder[in]) {
+            //每次进行出栈，实现倒着遍历
+            while (!roots.isEmpty() && roots.peek().val == inorder[in]) {
+                curRoot = roots.peek();
+                roots.pop();
+                in++;
+            }
+            //设为当前的右孩子
+            curRoot.right = new TreeNode(preorder[pre]);
+            //更新 curRoot
+            curRoot = curRoot.right;
+            roots.push(curRoot);
+            pre++;
+        } else {
+            //否则的话就一直作为左子树
+            curRoot.left = new TreeNode(preorder[pre]);
+            curRoot = curRoot.left;
+            roots.push(curRoot);
+            pre++;
+        }
+    }
+    return root;
+}
+
+
+作者：windliang
+链接：https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/solution/xiang-xi-tong-su-de-si-lu-fen-xi-duo-jie-fa-by--22/
+来源：力扣（LeetCode）
 ```
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
-- [总结记录]
-- 2020.xx.xx by lorwin
+- (@basic) 学习转换递归算法为非递归算法
+- (@basic) **对于多次需要遍历的数组（时间复杂度：查找 o(n)）,可以使用哈希表--map来存储（时间复杂度：构建 o(n); 查找 o(1)）,来降低后续的查找时间**
+- 2020.03.05 by lorwin
