--- a/leetcode_daily/LC322. Coin Change.md
+++ b/leetcode_daily/LC322. Coin Change.md
@@ -111,14 +111,5 @@ public:
 
 ## 记
 
-<!-- 
-符号用()包住
-@basic - 基础
-@memony - 需记忆
-@important - 重点
-@warning - 易错
-@todo - 待研究
- -->
-
 - **最优子结构（最优解可以从其子问题的最优解构造出来）**的性质可以极大的降低复杂度，注意观察！
-- 2020.xx.xx by lorwin
+- 2020.03.08 by lorwin
