--- a/leetcode_daily/LC169. Majority Element.md
+++ b/leetcode_daily/LC169. Majority Element.md
@@ -138,25 +138,39 @@ public:
 
 ### 方法六：位运算
 - 思路：
-  - 
+  - 既然题目中说到众数占到总数的一半以上，那么对于int的每一位，选出每一位的众数（0或1），就可以组成众数的int值
 - 时间复杂度：
-  - 
+  - o(n)
 - 空间复杂度：
-  - 
+  - o(1)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：68%（20ms）
+  - 内存：5%
 ```
-
+class Solution {
+public:
+    int majorityElement(vector<int>& nums) {
+        int res=0;
+        for(int i=0;i<32;i++){
+            int bit=0;
+            for(int num:nums) bit+=num>>i & 1;
+            if(bit>nums.size()/2) res+=1<<i;
+        }
+        return res;
+    }
+};
 ```
 
 ## 记
 
 - 要学会多种方法，因为不同方法的优缺点不同，而且可以开阔思路！
-- 随机法：
+- **随机法：**
   - 咋一看不太靠谱，程序有死循环的可能，但是计算就会发现，平均的时间复杂度还是o(n)的。
-  - 把**解决问题转化成了多次验证问题**，是个好的思路，眼前一亮
-- 投票算法证明：
+  - 把**解决问题转化成了多次验证问题**，是个好的思路，眼前一亮！
+- **投票算法证明：**
   - 如果候选人不是maj 则 maj,会和其他非候选人一起反对 会反对候选人,所以候选人一定会下台(maj==0时发生换届选举)
   - 如果候选人是maj , 则maj 会支持自己，其他候选人会反对，同样因为maj 票数超过一半，所以maj 一定会成功当选
+- **位运算法：**
+  - 也是眼前一亮，开阔思路！
+  - 注意：取一个数的第i低位，用 num>>i & 1; // &1 的作用是去除高位
 - 2020.03.13 by lorwin
