--- a/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
+++ b/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
@@ -111,8 +111,53 @@ public:
 ## 记
 
 - (@memory)学习方法三的思想
-- 快排代码：
+- **快排代码-左右指针法（适用于数组排序）**：
   ```
-
+  class Solution {
+      int quick_partition(vector<int>& arr,int l,int r){
+          int& key=arr[r];
+          while(l<r){
+              while(l<r && arr[l]<=key) l++;
+              while(l<r && arr[r]>=key) r--;
+              swap(arr[l],arr[r]);
+          }
+          swap(arr[r],key);
+          return r;
+      }
+      void quick_sort(vector<int>& arr,int l,int r){ //递归版本
+          if(l>=r) return;
+          int p=quick_partition(arr,l,r);
+          quick_sort(arr,l,p-1);
+          quick_sort(arr,p+1,r);
+      }
+      void quick_sort(vector<int>& arr,int l,int r){ // 非递归版
+          stack<int> s;
+          s.push(l);
+          s.push(r);
+          while(!s.empty()){
+              int right=s.top(); s.pop();
+              int left=s.top(); s.pop();
+              if(left<right){
+                  int p=quick_partition(arr,left,right);
+                  s.push(left);
+                  s.push(p-1);
+                  s.push(p+1);
+                  s.push(right);
+              }
+          }
+      }
+  public:
+      vector<int> getLeastNumbers(vector<int>& arr, int k) {
+          //for(auto a:arr) cout<<a<<' ';
+          //cout<<endl;
+          quick_sort(arr,0,arr.size()-1); //quick_sort
+          //for(auto a:arr) cout<<a<<' ';
+          //return vector<int>(arr.begin(),arr.begin()+k);
+      }
+  };
+  ```
+- **快排代码-前后指针法（适用于链表排序）**：
+  ```
+  
   ```
 - 2020.03.20 by lorwin
