--- a/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
+++ b/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
@@ -111,6 +111,7 @@ public:
 ## 记
 
 - (@memory)学习方法三的思想
+- 快排代码测试：https://leetcode-cn.com/problems/zui-xiao-de-kge-shu-lcof/
 - **快排代码-左右指针法（适用于数组排序）**：
   ```
   class Solution {
@@ -158,6 +159,17 @@ public:
   ```
 - **快排代码-前后指针法（适用于链表排序）**：
   ```
-  
+  int quick_partition(vector<int>& arr,int l,int r){
+    if(l<r){
+        int key=arr[r], cur=l, pre=cur-1;
+        while(cur<r){
+            while(arr[cur]<key && ++pre!=cur) swap(arr[cur],arr[pre]);
+            cur++;
+        }
+        swap(arr[++pre],arr[r]);
+        return pre;
+    }
+    return -1;
+  }
   ```
 - 2020.03.20 by lorwin
