--- a/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
+++ b/leetcode_daily/LC面试题40. 最小的k个数  LCOF.md
@@ -108,6 +108,35 @@ public:
 };
 ```
 
+## 方法四：计数排序
+- 思路：
+  - 由于数组中的数有最大范围，可以采用计数排序，以达到o(n)时间复杂度
+- 时间复杂度：
+  - o(n)
+- 空间复杂度：
+  - o(1)
+- 结果:
+  - 用时：84%（32ms）
+  - 内存：100%
+```
+class Solution {
+public:
+    vector<int> getLeastNumbers(vector<int>& arr, int k) {
+        vector<int> res;
+        int cnt[10001]={0};
+        for(int a:arr) cnt[a]++;
+        for(int i=0;i<10001;i++){
+            while(k>0 && cnt[i]>0){
+                res.push_back(i);
+                cnt[i]--;k--;
+            }
+            if(k==0) break;
+        }
+        return res;
+    }
+};
+```
+
 ## 记
 
 - (@memory)学习方法三的思想
@@ -172,4 +201,5 @@ public:
     return -1;
   }
   ```
+- [BFPRT算法原理](https://zhuanlan.zhihu.com/p/31498036):取中位数的中位数作为pivot，提高最坏复杂度
 - 2020.03.20 by lorwin
