--- a/leetcode_daily/LC820. Short Encoding of Words.md
+++ b/leetcode_daily/LC820. Short Encoding of Words.md
@@ -93,22 +93,119 @@ public:
 };
 ```
 
-### 方法三：字典树
+### 方法三：字典树(@memory)
 - 思路：
-  - [content]
+  - 对字典中的每个单词倒着插入字典树，树中所有叶子结点的单词的长度加一之和，即为所求
 - 时间复杂度：
-  - [content]
+  - o(sum(word_len_i))
 - 空间复杂度：
-  - [content]
+  - o(len(char)*sum(word_len_i))
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：83%（88ms）
+  - 内存：12%
 ```
-[`code`]
+class Solution {
+    struct TrieNode{
+        TrieNode *child[26];
+        bool is_end; //记录是否有单词以该字符结尾，此题不需要该字段
+        TrieNode(){
+            //结构体初始化
+            for(int i=0;i<26;i++) child[i]=NULL;
+            is_end=false;
+        }
+    };
+    void insert(TrieNode* root, string word){
+        TrieNode* now=root;
+        for(char chr:word){
+            int idx=chr-'a';
+            if(now->child[idx]==NULL) now->child[idx]=new TrieNode();
+            now=now->child[idx];
+        }
+        now->is_end=true;
+    }
+    int count(TrieNode* root, int depth){ 
+        /* count函数解读，返回值（表示该结点下层数值之和）为两类：
+            如果是叶子结点，则返回结点深度（单词长度）+1
+            如果是非叶结点，则返回子结点返回值之和（即收集下层的数值，也是该结点为根的树的所有叶结点之和）
+        */
+        bool is_leaf=true;
+        int sum=0;
+        for(int i=0;i<26;i++){
+            if(root->child[i] != NULL){
+                sum += count(root->child[i], depth+1);
+                is_leaf = false;
+            }
+        }
+        if(is_leaf) return depth+1; //深度即为单词长度，加上‘#’结束符，返回 单词长度+1
+        return sum;
+    }
+public:
+    int minimumLengthEncoding(vector<string>& words) {
+        TrieNode* root=new TrieNode();
+        for(string word:words){
+            reverse(word.begin(), word.end());
+            insert(root, word);
+        }
+        return count(root, 0);
+    }
+};
 ```
 
 ## 记
 
-- (@memony)[字典树](https://leetcode-cn.com/problems/short-encoding-of-words/solution/shou-si-zi-dian-shu-trie-shu-c-by-time-limit/)：
-  - 
+- (@memony)[字典树详解](https://leetcode-cn.com/problems/short-encoding-of-words/solution/shou-si-zi-dian-shu-trie-shu-c-by-time-limit/)：
+- 字典树实现
+  ```
+  class Trie {
+      Trie* Node[26];
+      bool is_end;
+  public:
+      /** Initialize your data structure here. */
+      Trie() {
+          for(int i=0;i<26;i++) Node[i]=NULL;
+          is_end=false;
+      }
+      
+      /** Inserts a word into the trie. */
+      void insert(string word) {
+          Trie* now=this;
+          for(char chr:word){
+              int idx=chr-'a';
+              if(now->Node[idx]==NULL) now->Node[idx]=new Trie();
+              now=now->Node[idx];
+          }
+          now->is_end=true;
+      }
+      
+      /** Returns if the word is in the trie. */
+      bool search(string word) {
+          Trie* now=this;
+          for(char chr:word){
+              int idx=chr-'a';
+              if(now->Node[idx]==NULL) return false;
+              now=now->Node[idx];
+          }
+          return now->is_end;
+      }
+      
+      /** Returns if there is any word in the trie that starts with the given prefix. */
+      bool startsWith(string prefix) {
+          Trie* now=this;
+          for(char chr:prefix){
+              int idx=chr-'a';
+              if(now->Node[idx]==NULL) return false;
+              now=now->Node[idx];
+          }
+          return true;
+      }
+  };
+
+  /**
+  * Your Trie object will be instantiated and called as such:
+  * Trie* obj = new Trie();
+  * obj->insert(word);
+  * bool param_2 = obj->search(word);
+  * bool param_3 = obj->startsWith(prefix);
+  */
+  ```
 - 2020.03.28 by lorwin
