--- a/leetcode_daily/LC912. Sort an Array.md
+++ b/leetcode_daily/LC912. Sort an Array.md
@@ -34,94 +34,187 @@ public:
 
 ### 方法二：快速排序
 - 时间复杂度：
-  - o()
+  - 平均：o(nlogn)，最坏：o(n^2)
 - 空间复杂度：
-  - o()
+  - o(logn)：递归栈或者栈的空间
 - 稳定性：
-  - 稳定？
+  - 不稳定
 ```
 class Solution {
-    int quick_partition(vector<int>& nums, int l, int r){
-        //设定枢纽元素
+    //对指定区域进行划分，返回划分点位置
+    int partition(vector<int>& nums, int l, int r){
+        //选择枢纽
         int& key=nums[r];
-        //双指针遍历，左边找大值，右边找小值，交换，直到指针相遇
+        //双指针遍历区域，左边找大值，右边找小值，交换；最后还原枢纽的位置，返回双指针位置
         while(l<r){
             while(l<r && nums[l]<=key) l++;
             while(l<r && nums[r]>=key) r--;
             swap(nums[l], nums[r]);
         }
-        //将枢纽元素归位
         swap(nums[l], key);
-        //返回枢纽元素的索引
         return l;
     }
-    void quick_sort(vector<int>& nums, int l, int r){  //递归版本
-        //递归出口
-        if(l>=r) return;
-        //计算划分边界
-        int p=quick_partition(nums, l, r);
-        //分别递归
-        quick_sort(nums, l, p-1);
-        quick_sort(nums, p+1, r);
-    }
-    void quick_sort(vector<int>& nums, int l, int r){   //非递归版本
-        //新建栈
+    // //快速排序（递归解法）:
+    // void quick_sort(vector<int>& nums, int l, int r){
+    //     //如果区域不存在或者长度为1，则返回
+    //     if(l>=r) return;
+    //     //对整个区域进行划分，两边递归；
+    //     int p=partition(nums, l, r);
+    //     quick_sort(nums, l, p-1);
+    //     quick_sort(nums, p+1, r);
+    // }   
+    //快速排序（非递归解法）：
+    void quick_sort(vector<int>& nums){
+        //新建栈，将整个区域的上下界压入栈中
         stack<int> s;
-        //初始化
-        s.push(l);
-        s.push(r);
-        //栈非空时循环，弹出该问题信息，如果不是递归出口，则计算划分边界，将子问题的信息压入栈中
+        s.push(0); s.push(nums.size()-1);
+        //当栈非空时循环，取出一组上下界，如果区域存在且长度不为1，进行划分，并将划分后两个区域的上下界储存在栈中；
         while(!s.empty()){
             int right=s.top(); s.pop();
             int left=s.top(); s.pop();
             if(left<right){
-                int p=quick_partition(nums, left, right);
-                s.push(left);
-                s.push(p-1);
-                s.push(p+1);
-                s.push(right);
+                int p=partition(nums, left, right);
+                s.push(left); s.push(p-1);
+                s.push(p+1); s.push(right);
             }
         }
     }
 public:
     vector<int> sortArray(vector<int>& nums) {
-        quick_sort(nums, 0, nums.size()-1);
+        // quick_sort(nums, 0, nums.size()-1); //递归
+        quick_sort(nums); //非递归
         return nums;
     }
 };
 ```
 
-### 方法三：
+### 方法三：桶排序
 - 时间复杂度：
-  - o()
+  - o(n)
 - 空间复杂度：
-  - o()
+  - o(m)
 - 稳定性：
-  - 稳定？
+  - 稳定
 ```
-code
+class Solution {
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        int cnt[100001]={0};
+        for(int num:nums) cnt[num+50000]++;
+        int now=0;
+        for(int i=0;i<100001;i++){
+            while(cnt[i]){
+                nums[now++]=i-50000;
+                cnt[i]--;
+            }
+        }
+        return nums;
+    }
+};
 ```
 
-### 方法四：
+### 方法四：堆排序
 - 时间复杂度：
-  - o()
+  - o(nlogn)
 - 空间复杂度：
-  - o()
+  - o(1)
 - 稳定性：
-  - 稳定？
+  - 不稳定
 ```
-code
+class Solution {
+    //对当前元素调整堆（堆的长度是len）
+    void adjust(vector<int>& nums, int i, int len){
+        //当前结点不是叶子结点时循环
+        while(i*2+1 < len){
+            //如果有左右儿子，则选择其中大的与当前结点比较；
+            //如果当前结点不小，则退出循环；
+            //如果当前结点小，则与大的儿子结点交换;交换后，当前结点变为交换的结点；
+            if(i*2+2 < len){
+                if(nums[i]>=max(nums[2*i+1], nums[2*i+2])) break;
+                if(nums[i*2+1]>nums[i*2+2]){
+                    swap(nums[i*2+1], nums[i]); i = i*2+1;
+                }else{
+                    swap(nums[i*2+2], nums[i]); i = i*2+2;
+                }
+            //如果只有左儿子，则与左儿子进行比较；
+            //如果当前结点不小，则退出循环；
+            //如果当前结点小，则与左儿子交换；退出循环；
+            }else{ 
+                if(nums[i]>=nums[2*i+1]) break;
+                else{
+                    swap(nums[i], nums[2*i+1]);
+                    i = 2*i+1;
+                    break;
+                }
+            }
+        }
+    }
+    //建初堆
+    void build_big_heap(vector<int>& nums){
+        int len = nums.size();
+        //从最后一个有子结点的结点开始调整堆
+        for(int i=len/2-1;i>=0;i--){
+            adjust(nums, i, len);
+        }
+    }
+    //堆排序
+    void heap_sort(vector<int>& nums){
+        //建初堆
+        build_big_heap(nums);
+        //从最后一个元素开始，和堆顶交换，堆长度减一，重建堆；直到堆长度为1
+        swap(nums[0], nums[nums.size()-1]);
+        for(int i=nums.size()-1;i>=1;i--){
+            adjust(nums, 0, i);
+            swap(nums[0], nums[i-1]);
+        }
+    }
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        heap_sort(nums);
+        return nums;
+    }
+};
 ```
 
-### 方法五：
+### 方法五：归并排序
 - 时间复杂度：
-  - o()
+  - o(nlogn)
 - 空间复杂度：
-  - o()
+  - o(n)
 - 稳定性：
-  - 稳定？
+  - 稳定
 ```
-code
+class Solution {
+    //合并，需要用到辅助数组
+    void merge(vector<int>& nums,vector<int>& tmps, int l, int r){
+        //将要合并的区域复制到辅助数组中
+        for(int i=l;i<=r;i++) tmps[i]=nums[i];
+        //计算中间位置m
+        int m=(l+r)/2;
+        //对于辅助数组的两个区域[l,m]和[m+1,r]，进行两个有序数组的排列，并将结果填回原数组
+        int p1=l, p2=m+1, idx=l;
+        while(p1<=m && p2<=r){
+            if(tmps[p1]<=tmps[p2]) nums[idx++]=tmps[p1++];
+            else nums[idx++]=tmps[p2++];
+        }
+        while(p1<=m) nums[idx++]=tmps[p1++];
+        while(p2<=r) nums[idx++]=tmps[p2++];
+    }
+    //归并排序，分成两份递归，然后合并；递归出口：区域不存在或者长度为1
+    void merge_sort(vector<int>& nums, vector<int>& tmps, int l, int r){
+        if(l>=r) return;
+        int m=(l+r)/2;
+        merge_sort(nums, tmps, l, m);
+        merge_sort(nums, tmps, m+1, r);
+        merge(nums, tmps, l, r);
+    }
+public:
+    vector<int> sortArray(vector<int>& nums) {
+        vector<int> tmps(nums.size(), 0);
+        merge_sort(nums, tmps, 0, nums.size()-1);
+        return nums;
+    }
+};
 ```
 
 ## 记
