--- a/leetcode_daily/LC912. Sort an Array.md
+++ b/leetcode_daily/LC912. Sort an Array.md
@@ -122,37 +122,24 @@ public:
   - 不稳定
 ```
 class Solution {
-    //对当前元素调整堆（堆的长度是len）
+    //调整堆(对某个长度的堆的某个位置上的结点进行调整)
     void adjust(vector<int>& nums, int i, int len){
-        //当前结点不是叶子结点时循环
-        while(i*2+1 < len){
-            //如果有左右儿子，则选择其中大的与当前结点比较；
-            //如果当前结点不小，则退出循环；
-            //如果当前结点小，则与大的儿子结点交换;交换后，当前结点变为交换的结点；
-            if(i*2+2 < len){
-                if(nums[i]>=max(nums[2*i+1], nums[2*i+2])) break;
-                if(nums[i*2+1]>nums[i*2+2]){
-                    swap(nums[i*2+1], nums[i]); i = i*2+1;
-                }else{
-                    swap(nums[i*2+2], nums[i]); i = i*2+2;
-                }
-            //如果只有左儿子，则与左儿子进行比较；
-            //如果当前结点不小，则退出循环；
-            //如果当前结点小，则与左儿子交换；退出循环；
-            }else{ 
-                if(nums[i]>=nums[2*i+1]) break;
-                else{
-                    swap(nums[i], nums[2*i+1]);
-                    i = 2*i+1;
-                    break;
-                }
-            }
+        //当该结点为非叶结点时循环，用指针指向子结点中最大的。
+        while(2*i+1<len){
+            //找到最大儿子：指针指向左儿子；如果有右儿子，而比左儿子大，则指针指向右儿子
+            int m=2*i+1;
+            if(2*i+2<len && nums[2*i+2]>nums[m]) m=2*i+2;
+            //如果最大儿子大于自身，则交换，当前结点变为最大儿子；否则，退出循环
+            if(nums[m]>nums[i]){
+                swap(nums[m], nums[i]);
+                i = m;
+            }else break;
         }
     }
     //建初堆
     void build_big_heap(vector<int>& nums){
-        int len = nums.size();
-        //从最后一个有子结点的结点开始调整堆
+        int len=nums.size();
+        //从最后一个非叶结点开始往前循环，进行整个长度的堆的调整，直到迭代到第一个结点为止
         for(int i=len/2-1;i>=0;i--){
             adjust(nums, i, len);
         }
@@ -161,7 +148,7 @@ class Solution {
     void heap_sort(vector<int>& nums){
         //建初堆
         build_big_heap(nums);
-        //从最后一个元素开始，和堆顶交换，堆长度减一，重建堆；直到堆长度为1
+        //换下堆顶，对长度减一的堆的堆顶进行调整，循环直到堆长度为1；
         swap(nums[0], nums[nums.size()-1]);
         for(int i=nums.size()-1;i>=1;i--){
             adjust(nums, 0, i);
