--- a/leetcode_daily/LC887. Super Egg Drop.md
+++ b/leetcode_daily/LC887. Super Egg Drop.md
@@ -21,7 +21,7 @@
 
 ### 方法一：常规dp，超时
 - 思路：
-  - 动态规划，dp[K][N]表示在有K个鸡蛋，N个层楼的情况下，最小的最坏情况移动次数
+  - 动态规划，dp[K][N]表示在有K个鸡蛋，N个层楼的情况下，最小的最坏情况移动次数F
   - 状态转移方程：dp[K][N] = 1 + min(max_i(dp[K][N-i], dp[K-1][i-1])), 1<=i<=N
 - 时间复杂度：
   - o(K*N^2)
@@ -57,31 +57,75 @@ public:
 - 空间复杂度：
   - o(K*N)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：40%（48ms）
+  - 内存：50%
 ```
-[`code`]
+class Solution {
+    vector<vector<int>> dp;
+    int dp_func(int K, int N) {
+        // int bin=log(N)/log(2)+1;
+        // if(K>=bin) dp[K][N]=bin;
+        if(dp[K][N]==-1){
+            if(K==1 || N<=2) dp[K][N]=N;
+            else{
+                int l=1, r=N;
+                while(l<r){
+                    int m=(l+r)/2;
+                    int f1=dp_func(K,N-m);
+                    int f2=dp_func(K-1,m-1);
+                    if(f1>f2) l=m+1;
+                    else if(f1<f2) r=m-1;
+                    else l=r=m;
+                }
+                dp[K][N]=min(max(dp_func(K,N-l),dp_func(K-1,l-1)),max(dp_func(K,N-r),dp_func(K-1,r-1)))+1;
+            }
+        }
+        return dp[K][N];
+    }
+public:
+    int superEggDrop(int K, int N) {
+        dp=vector<vector<int>>(K+1, vector<int>(N+1, -1));
+        return dp_func(K, N);
+    }
+};
 ```
 
-### 方法三：另类dp，空间o(1)
+### 方法三：另类dp，空间o(1)，思路清晰，超级简洁！
 - 思路：
-  - 
+  - dp[K][F]=N，表示在有K个鸡蛋，和最多移动次数F的情况下，能够确定的最高楼层数N
+  - 状态转移：在某层扔鸡蛋，蛋碎下楼，蛋好上楼
+  - 状态转移方程：dp[K][F]=dp[K][F-1]+dp[K-1][F-1]+1
+  - (蛋好，即K个蛋，在F-1次移动，所能达到的最大高度 + 蛋坏，即K-1个蛋，在F-1次移动，所能到达的最大高度 + 1)
 - 时间复杂度：
-  - o()
+  - o(K*N)
 - 空间复杂度：
-  - o()
+  - o(1)
 - 结果:
-  - 用时：%（ms）
-  - 内存：%
+  - 用时：85%（4ms）
+  - 内存：100%
 ```
-[`code`]
+class Solution {
+public:
+    int superEggDrop(int K, int N) {
+        vector<int> dp(K+1, 0);
+        int F=0;
+        while(dp[K]<N){
+            for(int i=K;i>=1;i--) dp[i]=dp[i]+dp[i-1]+1;
+            F++;
+        }
+        return F;
+    }
+};
 ```
 
 ## 记
 
 - (@memory)动态规划总结：
   - 常规套路：
-    - 
+    - **状态**：鸡蛋数K，楼层数N
+    - **选择**：选择哪层去扔鸡蛋
   - 优化点：
-    - 
+    - 空间优化 -> **二维数组用一维数组代替**
+    - 单调函数 -> **二分搜索单调函数**
+    - 尝试不同的dp式子 -> 换角度思考
 - 2020.04.11 by lorwin
