--- a/leetcode_daily/LC836. Rectangle Overlap.md
+++ b/leetcode_daily/LC836. Rectangle Overlap.md
@@ -68,7 +68,7 @@ public:
 
 ## 记
 
-- (@memony) 学习思想：
+- (@memory) 学习思想：
   - 将**矩形有重叠**转化为**在两轴上的投影都有重叠**
   - **判断两个线段是否重叠：右端的最小值大于左端的最大值**
 - 2020.03.18 by lorwin
