--- a/leetcode_daily/LC820. Short Encoding of Words.md
+++ b/leetcode_daily/LC820. Short Encoding of Words.md
@@ -153,7 +153,7 @@ public:
 
 ## 记
 
-- (@memony)[字典树详解](https://leetcode-cn.com/problems/short-encoding-of-words/solution/shou-si-zi-dian-shu-trie-shu-c-by-time-limit/)：
+- (@memory)[字典树详解](https://leetcode-cn.com/problems/short-encoding-of-words/solution/shou-si-zi-dian-shu-trie-shu-c-by-time-limit/)：
 - 字典树实现
   ```
   class Trie {
